1. Интегрировал калькулятор маржинальности "Мишка посчитает" в приложение. 2. Начал работу над галереей работ

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/line_1"
     android:gravity="center_horizontal"
     android:paddingStart="16dp"
@@ -74,6 +75,29 @@
             android:text="Антидождь и защита ткани"
             android:textAllCaps="false" />
 
+        <!-- Кнопки для калькулятора и фотогалереи -->
+        <Button
+            android:id="@+id/buttonInfo6"
+            style="@style/infoButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="Наши работы"
+            android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/buttonInfo7"
+            style="@style/infoButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="Калькулятор маржинальности"
+            android:textAllCaps="false"/>
+
     </LinearLayout>
 
     <!-- Добавляем изображение penta_logo_pink -->
@@ -83,7 +107,7 @@
         android:layout_height="120dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/penta_logo_pink" />
 
 </RelativeLayout>
