--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,10 @@
     <color name="button_selector_color">#E91E63</color>
     <color name="drawable_tint_color">#FFFFFF</color>
 
+    <!-- Цвета Для Мишка посчитает -->
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#0288D1</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
 </resources>
