--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,5 +31,6 @@
     <color name="purple_500">#0288D1</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#FF018786</color>#2D1E69
+    <color name="bear_calculate_blue">#2D1E69</color>
 </resources>
