--- a/app/src/main/res/drawable/ic_arrow_left.xml
+++ b/app/src/main/res/drawable/ic_arrow_left.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#2D1E69"
+        android:fillColor="#83FFFFFF"
         android:pathData="M14.59,16.59L9.17,12l5.42-4.59L13,6l-7,6l7,6l1.59-1.41z"/>
 </vector>
