--- a/app/src/main/res/drawable/ic_arrow_right.xml
+++ b/app/src/main/res/drawable/ic_arrow_right.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#2D1E69"
+        android:fillColor="#83FFFFFF"
         android:pathData="M9.41,16.59L14.83,12l-5.42-4.59L11,6l7,6l-7,6l-1.59-1.41z"/>
 </vector>
