--- a/app/src/main/res/layout/activity_product_info_6.xml
+++ b/app/src/main/res/layout/activity_product_info_6.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@color/white">
+    android:background="@drawable/line_background2">
+
+    <!-- Заголовок "Наши работы" -->
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Наши работы"
+        android:textColor="#1B1B1E"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
 
     <!-- Кнопка для перехода к предыдущему изображению -->
     <ImageButton
         android:id="@+id/btnPrevious"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_left"
-        android:background="?attr/selectableItemBackground"
-        android:contentDescription="@string/previous_image"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/previous_image"
+        android:src="@drawable/ic_arrow_left"
+        android:elevation="4dp"/>
 
     <!-- Изображение для отображения -->
     <ImageView
@@ -31,13 +44,26 @@
     <!-- Кнопка для перехода к следующему изображению -->
     <ImageButton
         android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_right"
-        android:background="?attr/selectableItemBackground"
-        android:contentDescription="@string/next_image"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="1dp"
+        android:background="?attr/selectableItemBackground"
+        android:contentDescription="@string/next_image"
+        android:src="@drawable/ic_arrow_right"
+        android:elevation="4dp"/>
+
+    <!-- Логотип внизу с отступом 20dp -->
+    <ImageView
+        android:id="@+id/imageViewLogo"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/penta_logo_pink"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp" />
 
 </RelativeLayout>
+
